# cmake-recipes

./: README.md
lib-module/: CMakeLists.txt  README.md
multi-file-project/: CMakeLists.txt  README.md  Version.h.in
multi-file-project-modules/: CMakeLists.txt  README.md
